<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
<EditText
    android:id="@+id/reminderEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/reminder" />

    <Button
        android:id="@+id/toastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/reverseToastButton"
        android:layout_alignBottom="@+id/reverseToastButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="51dp"
        android:layout_marginStart="51dp"
        android:text="@string/toast" />

    <Button
        android:id="@+id/reverseToastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/reminderEditText"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:layout_marginTop="92dp"
        android:text="@string/reverseToast" />

</RelativeLayout>